--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron-prebuilt": "^1.2.0"
+  },
+  "dependencies": {
+    "jquery": "^3.7.1"
   }
 }
